Say in the terminal what the What's new launcher is doing
The launcher exited silently when nothing was new or on the first run,
and printed only four JEP 472 warnings before opening its window, so a
window behind the terminal looked like a hang. Ported from
ContextSwitcher's scripts/WhatsNew.java (2026-09-12):

- one terminal line for each outcome: first run, nothing new, showing N
  changes, window closed, cancelled
- the window is always-on-top and raised: Windows ignores toFront alone
  for a process that is not in the foreground
- --enable-native-access=javafx.graphics: jbang puts the JavaFX //DEPS
  on the module path, so ALL-UNNAMED does not cover the caller

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>